add filter to restapi
